# docs/api/account-service.openapi.json
@@ -767,6 +767,40 @@
         },
         "type" : "object"
       },
+      "NotificationSummaryResponse" : {
+        "properties" : {
+          "bySeverity" : {
+            "additionalProperties" : {
+              "format" : "int64",
+              "type" : "integer"
+            },
+            "type" : "object"
+          },
+          "bySourceType" : {
+            "additionalProperties" : {
+              "format" : "int64",
+              "type" : "integer"
+            },
+            "type" : "object"
+          },
+          "byType" : {
+            "additionalProperties" : {
+              "format" : "int64",
+              "type" : "integer"
+            },
+            "type" : "object"
+          },
+          "total" : {
+            "format" : "int64",
+            "type" : "integer"
+          },
+          "unread" : {
+            "format" : "int64",
+            "type" : "integer"
+          }
+        },
+        "type" : "object"
+      },
       "PageResponseAccountResponse" : {
         "properties" : {
           "content" : {
@@ -3168,8 +3202,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "additionalProperties" : { },
-                  "type" : "object"
+                  "$ref" : "#/components/schemas/NotificationSummaryResponse"
                 }
               }
             },
